# edgegpt

./: Cargo.toml  test.py
examples/: basic.rs  basic_generation.rs  batch_generation.rs  embeddings.rs  streaming_generation.rs  summarize.rs
src/: config.rs  generation.rs  lib.rs  weights.rs
src/model/: bart.rs  base.rs  distilgpt2.rs  gpt2.rs  mod.rs
src/tokenizer/: mod.rs  wasm.rs
src/wasm/: mod.rs
