[package]
name = "edgegpt"
version = "0.1.0"
edition = "2021"
authors = ["Ólafur Aron Jóhannsson <olafurjohannss@gmail.com>"]
description = "Fast GPT inference library for Rust and WASM for text generation on native and edge devices"
repository = "https://github.com/olafurjohannssson/edgegpt"
license = "MIT"
keywords = ["gpt", "nlp", "wasm", "transformer", "generation"]
categories = ["wasm", "text-processing", "text-generation"]

[features]
default = []
openblas = ["dep:blas-src", "dep:openblas-src", "ndarray/blas", "edgetransformers/openblas"]

[dependencies]
edgetransformers = { path = "../edgetransformers" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
safetensors = "0.6.2"
ndarray = "0.16"
rand = "0.8"

# Optional BLAS dependencies
blas-src = { version = "0.10", features = ["openblas"], optional = true }
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
rayon = "1.11.0"
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["blocking", "rustls-tls"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "Response", "Window", "WorkerGlobalScope"] }
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3.31"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true